Fix messagebox (#585)
* Repaired messagebox one more time

* Don't clean input when message is too long

write too long message in dialogue and hit sent
now: error is displayed and message still present
before: error is displayed and message is disappeared

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -54,7 +54,6 @@ label
 
 .unread
   background-color: #fffbdd
-  margin-top: 5px
   .timestamp
     color: #7f7a56 !important
 
